# secretary

./: .gitignore  LICENSE  README.md  secretary.py  setup.py
secretary/: __init__.py  __main__.py  component.py  dependencies.py  formatter.py  prompt.py  shell.py
templates/c-make/: task.py
templates/c-make/files/: .pre-commit-config.yaml  Makefile
templates/cmake/: .clang-format  CMakeLists.txt  compile.sh  task.py
templates/cmake/benchmarks/: CMakeLists.txt  main.cpp
templates/cmake/files/src/: CMakeLists.txt
templates/cmake/files/tests/: CMakeLists.txt
templates/cmake/include/: main.hpp
templates/conan/: .gitignore  CMakeLists.txt  conanfile.py
templates/conan/benchmarks/: CMakeLists.txt
templates/conan/files/: .clang-format
templates/conan/src/: CMakeLists.txt  main.cpp
templates/cpp-conan/files/: compile.sh
templates/cpp-conan/files/tests/: CMakeLists.txt
templates/make/: .clang-format
templates/make/files/: .gitignore  Makefile
templates/python/files/: main.py
